update BASE64Encoder to java.util.Base64